--- a/seminar3/styles.css
+++ b/seminar3/styles.css
@@ -34,3 +34,22 @@ button:hover {
     justify-content: center;
     gap: 200px;
 }
+
+header {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    margin-top: 20px;
+}
+
+
+.banner{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+
+}
+
+
+
