--- a/seminar3/styles.css
+++ b/seminar3/styles.css
@@ -1,19 +1,50 @@
-body{
-    align-items: center;
-    justify-content: center;
-    height: 100vh;
+@keyframes fade-in {
+    to {
+        background-color: rgba(0, 0, 0, 0.5);
+    }
 }
-h1,h2,h3, p{
+
+@keyframes appearance {
+    to {
+        opacity: 1;
+        transform: translateY(0);
+        
+    }
+}
+
+/* .slide-up {
+    transform: translateY(100%);
+    animation: slideUpAnimation 1s forwards;
+} */
+
+
+
+body{
+    max-width: 100vw;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    height: 100%;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    color:rgb(230, 230, 230)
+}
+
+h1, h2, h3, p{
     text-align: center;
     margin-bottom: 20px;
 }
+
 div {
     text-align: center;
-    margin-bottom: 20px;
+
 }
+
 img {
-    width: 30%;
+    width: fit-content;
+    max-width: 100%;
 }
+
 i{
     text-align: center;
 }
@@ -29,11 +60,6 @@ button:hover {
     color: #000000; /* hover:text-amber-400 */
 }
 
-.imgtable{
-    display: flex;
-    justify-content: center;
-    gap: 200px;
-}
 
 header {
     display: flex;
@@ -43,13 +69,110 @@ header {
     margin-top: 20px;
 }
 
+.navbar {
+    margin-top: 10px;
+    background-color: rgb(0, 0, 0,0.3);
+    position: fixed;
+    width: 1240px;
+    border-radius: 10px;
+    top: 0;
+    z-index: 1000;
+}
+
+.nav-list {
+    list-style-type: none;
+    padding: 0;
+    margin: 0;
+    display: flex;
+}
+
+.nav-list li {
+    margin: 0;
+    padding: 10px 30px;
+}
+
+.nav-list li a {
+    color: #fff;
+    text-decoration: none;
+}
+
+.nav-list li a:hover {
+    text-decoration: underline;
+}
+
+.nav-list .last-item {
+    margin-left: auto; /* Push the last item to the right */
+}
+.containerthatappears{
+    opacity: 0;
+    margin-top: 55px;
+    max-width: 1200px;
+    padding: 20px;
+    border-radius: 10px;
+    background-color: rgba(0, 0, 0, 0.4);
+
+    animation: appearance 0.5s 0.5s forwards;
+    
+}
 
 .banner{
     width: 100%;
     height: 100%;
     object-fit: cover;
+}
+
+.container{
+    margin-top: 3000px;
+    text-align: left;
 
 }
 
+.containerdune {
+    max-width: 1200px;
+    margin: 20px auto;
+    /* padding: 20px; */
+    padding: 0px 200px;
+    background-color: #000000;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    border-radius: 5px;
+    opacity: 0; 
+    animation: appearance 0.5s s forwards;
+    z-index: 100;
+}
 
+.bguldanaisbestgirl {
+    background-image: url(images/desert.jpg);
+    background-repeat: no-repeat;
+    background-size:cover;
+    background-attachment: fixed;
+    align-items: center;
+    justify-content: center;
+    
+}
 
+/* .bguldanaisbestgirl::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-repeat: no-repeat;
+    background-size:cover;
+    background-attachment: fixed;
+    align-items: center;
+    justify-content: center;
+    background-color: rgba(0, 0, 0, 0.0); 
+    animation: fade-in 1s 0.5s forwards;
+} */
+
+.overlay {
+    position: fixed;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    background-color: rgba(0, 0, 0, 0.0);
+    z-index: -1;
+    animation: fade-in 1s 0.5s forwards;
+}
