--- a/seminar3/styles.css
+++ b/seminar3/styles.css
@@ -4,6 +4,13 @@
     }
 }
 
+@keyframes fade-in-ch {
+    to {
+        background-color: rgba(0, 0, 0, 0.7);
+    }
+}
+
+
 @keyframes appearance {
     to {
         opacity: 1;
@@ -22,6 +29,7 @@
 body{
     max-width: 100vw;
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
     text-align: center;
@@ -43,6 +51,7 @@ div {
 img {
     width: fit-content;
     max-width: 100%;
+    border-radius: 10px;
 }
 
 i{
@@ -103,6 +112,90 @@ header {
 .nav-list .last-item {
     margin-left: auto; /* Push the last item to the right */
 }
+
+.containerimg{
+    opacity: 0;
+    padding: 20px;
+    border-radius: 10px;
+    margin-top: 15px;
+    max-width: 1200px;
+    background-color: rgba(0,0,0, 0.3);
+    display: flex;
+    margin-bottom: 100px;
+    animation: appearance 0.5s 0.5s forwards;
+}
+
+.image{
+    max-width: 220px;
+}
+
+.containercharacters{
+    opacity: 0;
+    padding: 20px;
+    border-radius: 10px;
+    margin-top: 20px;
+    max-width: 1200px;
+    background-color: rgba(255, 255, 255, 0.4);
+    display: flex; 
+    animation: appearance 0.5s 0.5s forwards;
+}
+
+.containercharacters-first{
+    opacity: 0;
+    padding: 20px;
+    border-radius: 10px;
+    margin-top: 60px;
+    max-width: 1200px;
+    background-color: rgba(255, 255, 255, 0.4);
+    display: flex; 
+    animation: appearance 0.5s 0.5s forwards;
+}
+
+.containercharacters-last{
+    opacity: 0;
+    padding: 20px;
+    border-radius: 10px;
+    margin-top: 20px;
+    margin-bottom: 100px;
+    max-width: 1200px;
+    background-color: rgba(255, 255, 255, 0.4);
+    display: flex; 
+    animation: appearance 0.5s 0.5s forwards;
+}
+
+
+.containerwhite{
+    background-color: rgba(255,255,255, 0.3);
+    padding: 10px;
+    border-radius: 10px;
+    margin-top: 20px;
+}
+
+.containertxt{
+    text-align:justify;
+    margin-top: 20px;
+    
+    padding: 0px 10px;
+}
+
+.containertxta{
+    text-align:justify;
+    margin-top: 20px;
+    margin-bottom: 25px;
+    padding: 0px 10px;
+}
+
+
+.containerh{
+    text-align: left;
+    margin-bottom: -10px;
+    padding: 0px 10px;
+}
+
+.txt{
+    text-align: left;
+    padding: 0px 20px;
+}
 .containerthatappears{
     opacity: 0;
     margin-top: 55px;
@@ -110,9 +203,20 @@ header {
     padding: 20px;
     border-radius: 10px;
     background-color: rgba(0, 0, 0, 0.4);
-
     animation: appearance 0.5s 0.5s forwards;
+   
     
+}
+
+.containerthatappears-ch{
+    opacity: 0;
+    margin-top: 55px;
+    max-width: 1220px;
+    padding: 10px;
+    border-radius: 10px;
+    background-color: rgba(0, 0, 0, 0.4);
+    animation: appearance 0.5s 0.5s forwards;
+   
 }
 
 .banner{
@@ -122,7 +226,8 @@ header {
 }
 
 .container{
-    margin-top: 3000px;
+    margin-top: 30px;
+    margin-bottom: 1000px;
     text-align: left;
 
 }
@@ -176,3 +281,15 @@ header {
     z-index: -1;
     animation: fade-in 1s 0.5s forwards;
 }
+
+.overlay-ch {
+    position: fixed;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    background-color: rgba(0, 0, 0, 0.0);
+    z-index: -1;
+    animation: fade-in-ch 1s 0.5s forwards;
+}
+
