--- a/seminar3/styles.css
+++ b/seminar3/styles.css
@@ -196,6 +196,39 @@ header {
     text-align: left;
     padding: 0px 20px;
 }
+
+.uttxt{
+    text-align: justify;
+    padding: 0px 20px;
+    max-width: 600px;
+}
+
+table {
+    border-collapse: collapse;
+    width: 300px;
+}
+
+th, td {
+    border: 1px solid black;
+    text-align: center;
+    padding: 8px;
+}
+
+th {
+    background-color: #f2f2f2;
+}
+
+.marked-date {
+    background-color: red;
+    color: white;
+}
+
+.calendar{
+    margin-left: 70px;
+    margin-right: 70px;
+    width: 500px;
+}
+
 .containerthatappears{
     opacity: 0;
     margin-top: 55px;
@@ -217,6 +250,17 @@ header {
     background-color: rgba(0, 0, 0, 0.4);
     animation: appearance 0.5s 0.5s forwards;
    
+}
+
+.containerthatappears-ch-a{
+    opacity: 0;
+    margin-top: 20px;
+    max-width: 1220px;
+    padding: 10px;
+    border-radius: 10px;
+    background-color: rgba(0, 0, 0, 0.4);
+    animation: appearance 0.5s 0.5s forwards;
+
 }
 
 .banner{
